# da-connectivity-layer

./: Cargo.toml
src/bitcoin-da/: Cargo.toml
src/bitcoin-da/src/: da.rs  lib.rs  service.rs  verifier.rs
src/bitcoin-da/src/helpers/: test_utils.rs
src/bitcoin-da/src/spec/: address.rs  blob.rs  block.rs  block_hash.rs  header.rs  header_stream.rs  mod.rs
src/identities/btc-node/: Cargo.toml
src/identities/btc-node/src/: main.rs
src/identities/layer-edge-node/: Cargo.toml
src/node/src/: main.rs
