workspace = { members = [ "src/identities/btc-node", "src/identities/layer-edge-node","src/node"] }

[package]
name = "da-connectivity-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.12", features = [
    "rustls-tls",
    "json",
    "http2",
], default-features = false }
