[workspace]
members = [
  "src/bitcoin-da", 
  "src/identities/btc-node",
  "src/identities/layer-edge-node",
  "src/node"
]

[package]
name = "da-connectivity-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
async-trait = "0.1.71"
anyhow = { version = "1.0.68", default-features = false }
borsh = { version = "0.10.3", default-features = false }
digest = { version = "0.10.6", default-features = false, features = ["alloc"] }
futures = "0.3"
hex = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "serde",
]}
pin-project = { version = "1.1.3" }
rand = "0.8"
serde = { version = "1.0.192", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = "1.0.50"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", default-features = false }

reqwest = { version = "0.12", features = [
    "rustls-tls",
    "json",
    "http2",
], default-features = false }
